src/test/resources/failing/fail29.pnd
template Foo<A> {
    P(x) : int
    @type Animal
    A.Q(x) <- P(x)
}
Foo<_> as F1